<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <com.example.tracetouchletters.views.DrawDirectionMyImageView
        android:id="@+id/teacherDrawDirection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/teacherDrawDirectionCancel"
        android:layout_marginBottom="10dp"/>


    <Button
        android:id="@+id/teacherDrawDirectionCancel"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/studentHapticPrevDesc"
        android:text="@string/teacher_draw_direction_cancel"/>


    <Button
        android:id="@+id/teacherDrawDirectionUndo"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/studentHapticPrevDesc"
        android:text="@string/teacher_draw_direction_undo"/>

    <Button
        android:id="@+id/teacherDrawDirectionSave"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/studentText"
        android:contentDescription="@string/studentHapticNextDesc"
        android:text="@string/teacher_draw_direction_save"/>


</RelativeLayout>