<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                tools:context="com.example.tracetouchletters.ModeSelectionActivity">
    <Button
        android:id="@+id/hapticPlacementCancel"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:width="90dp"
        android:text="@string/cancel"/>

    <Button
        android:id="@+id/hapticPlacementOK"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:width="90dp"
        android:text="@string/ok"/>


    <LinearLayout
        android:id="@+id/caseSelectionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/hapticPlacementCancel"
        android:orientation="horizontal">

        <RelativeLayout android:id="@+id/hapticCaseSelectionRelativeLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
            <TextView android:id="@+id/caseSelectionTitle"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/caseSelection"/>
            <RadioButton
                android:id="@+id/upper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/caseSelectionTitle"
                android:text="@string/upperCase"/>

            <RadioButton
                android:id="@+id/lower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/caseSelectionTitle"
                android:layout_toEndOf="@id/upper"
                android:text="@string/lowerCase"/>
        </RelativeLayout>

        <CheckBox
            android:id="@+id/noHaptic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/noHaptic"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/previewSets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/caseSelectionLinearLayout"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/hapticPlacementLayer1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/hapticBackgroundRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="@string/hapticBackgroundTitle"/>

            <com.example.tracetouchletters.views.MyImageView
                android:id="@+id/hapticBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                app:previewHapticPlacement="BACKGROUND"
                app:previewMode="true"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/hapticPlacementLayer2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/hapticLetterRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".4"
                android:text="@string/hapticLetterTitle"/>
            <com.example.tracetouchletters.views.MyImageView
                android:id="@+id/hapticLetter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                app:previewHapticPlacement="LETTER"
                app:previewMode="true"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/hapticPlacementLayer3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/hapticDirectionRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".4"
                android:text="@string/hapticDirectionTitle"/>
            <com.example.tracetouchletters.views.MyImageView
                android:id="@+id/hapticDirection"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".6"
                app:previewHapticPlacement="DIRECTION"
                app:previewMode="true"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>