<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tracetouchletters.MainActivity" >

    <TextView
        android:id="@+id/app_intro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:text="@string/app_intro2"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/app_intro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/app_intro2"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/app_intro1"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />

</RelativeLayout>